fix: correct spacing in custom styles and add missing emphasis in post content

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -2,7 +2,7 @@
 
 // -- Put custom style under this point -- //
 img + em { 
-	
+	margin-bottom: 1.5em;;
 }
 
 .disclaimer {
